[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmvc-middleware"
version = "0.6.3"
description = "Production-ready middleware collection with 90+ components for FastAPI/Starlette applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Shivansh Sengar", email = "sengarsinghshivansh@gmail.com" },
    { name = "Shreyansh Sengar", email = "sengarsinghshreyansh@gmail.com" }
]
maintainers = [
    { name = "Shivansh Sengar", email = "sengarsinghshivansh@gmail.com" },
    { name = "Shreyansh Sengar", email = "sengarsinghshreyansh@gmail.com" }
]
keywords = [
    "fastapi",
    "starlette",
    "middleware",
    "cors",
    "security",
    "rate-limiting",
    "authentication",
    "logging",
    "api",
    "jwt",
    "csrf",
    "caching",
    "compression",
    "health-check",
    "metrics",
    "prometheus",
    "circuit-breaker",
    "bulkhead",
    "idempotency",
    "session",
    "multi-tenant",
    "feature-flags",
    "ab-testing",
    "geoip",
    "bot-detection",
    "audit-logging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "starlette>=0.27.0",
]

[project.optional-dependencies]
jwt = ["pyjwt>=2.0.0"]
proxy = ["httpx>=0.24.0"]
all = [
    "pyjwt>=2.0.0",
    "httpx>=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "httpx>=0.24.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pyjwt>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "bandit[toml]>=1.7.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/shregar1/fastmvc-middleware"
Documentation = "https://github.com/shregar1/fastmvc-middleware#readme"
Repository = "https://github.com/shregar1/fastmvc-middleware"
Issues = "https://github.com/shregar1/fastmvc-middleware/issues"
Changelog = "https://github.com/shregar1/fastmvc-middleware/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/fastmiddleware",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
]
exclude = [
    "*.pyc",
    "__pycache__",
    "*.egg-info",
    ".git",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "htmlcov",
    "venv",
    ".venv",
]

[tool.hatch.build.targets.wheel]
packages = ["fastmiddleware"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --cov=fastmiddleware --cov-report=term-missing --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:starlette.*:",
    "ignore::DeprecationWarning:httpx.*:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = false
warn_redundant_casts = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
check_untyped_defs = false
strict_equality = true
extra_checks = false
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented out code)
    "PL",    # pylint
    "RUF",   # Ruff-specific rules
    "PERF",  # Perflint
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments (middleware configs need many options)
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "PLR2004", # magic values (HTTP status codes like 200, 300 are standard)
    "ARG001",  # unused function argument (common in middleware - call_next, request)
    "ARG002",  # unused method argument (common in middleware)
    "PERF203", # try-except in loop (necessary for date parsing, etc.)
    "PERF401", # list comprehension (conditional appends don't convert cleanly)
    "PLC0415", # import not at top level (needed for optional dependencies like pyjwt)
    "RUF012",  # mutable class attributes (would require extensive ClassVar refactor)
    "SIM102",  # nested if statements (sometimes more readable)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "ARG", "S101", "PLC0415", "E402"]
"__init__.py" = ["F401", "E402", "I001", "RUF022"]

[tool.ruff.lint.isort]
known-first-party = ["fastmiddleware"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["fastmiddleware"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "class .*\\bProtocol\\):",
    "\\.\\.\\.",
]
fail_under = 65
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # assert used
targets = ["fastmiddleware"]

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/tests.py"]
